Tue Oct 15 12:42:25 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* README: updated the contact informations

Tue Oct 15 11:40:19 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed the behaviour of node() patter which
	  didn't patch the one defined in XPath :-( . Closes bug #95793
	* tests/docs/Makefile.am tests/docs/bug-92.xml
	  tests/general/Makefile.am tests/general/bug-92.*: added the
	  example in the regression tests for this case

Mon Oct 14 12:29:53 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libxslt/win32config.h: remapped mkdir to _mkdir for MS runtime
	* win32/Makefile.msvc: added security.c to the build
	* win32/libxslt.def.src: exported functions from security.c

Thu Oct 10 18:41:56 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: added another option --writesubtree to allow
	  documents to be written only to  a given subtree.

Thu Oct 10 17:16:52 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.[ch] libxslt/Makefile.am: new module with
	  runtime security checks, it will also check and do directory
	  creation when allowed
	* libxslt/documents.c libxslt/imports.c libxslt/transform.c
	  libxslt/xslt.c libxslt/xsltInternals.h: plug-in the new
	  security infrastructure probes at file reading or file creation
	* xsltproc/xsltproc.c: plugged the security module there too,
	  added the new options --nowrite and --nomkdir
	* doc/*: updated the man page and regenerated.

Wed Oct  9 18:37:56 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* doc/*: updated the doc XSLT to add the search, added the search
	  page, fixed a link problem raised by Yves Pratter, regenerated

Wed Oct  9 14:27:17 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* doc/index.py: the indexer version of the XSLT part of the
	  xmlsoft site + archives

Sun Sep 29 20:02:25 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* win32/Makefile.msvc: introduced double-run compilation.